--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.22.0",
+    "@types/nodemailer": "^7.0.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "google-auth-library": "^10.5.0",
+    "google-spreadsheet": "^5.0.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-sanity": "^11.6.12",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sanity": "^4.22.0",
