--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-scroll": "^1.9.3",
     "sanity": "^4.22.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0",
@@ -37,6 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-scroll": "^1.8.10",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
